Closed Bug 1508599 Opened 5 years ago Closed 5 years ago

Don't log error on Fennec when Telemetry is disabled

Categories

(Toolkit :: Telemetry, defect, P1)

defect
Points:
1

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox64 --- unaffected
firefox65 --- fixed

People

(Reporter: janerik, Assigned: janerik)

References

Details

Attachments

(1 file)

Bug 1508126 showed that we do log an error when Telemetry is disabled on Fennec.
We should check if we can simply avoid logging that error when we know that Telemetry is disabled.
Does this also affect 64?
Assignee: nobody → jrediger
Points: --- → 1
Priority: -- → P1
This is indeed a regression.
Previously the error was only logged on exception. Now it is logged when the operation returns false (which can happen because Telemetry is disabled).

The new implementation only landed a month ago[1], thus nightly 65.

[1]: https://hg.mozilla.org/mozilla-central/rev/26b4dcdfd627
To make it more clear: the only regression is the error being logged. Functionality is the same and correct (it records the stopwatch time to a histogram correctly).
Pushed by jrediger@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1062e65758d6
Return a proper result value on accumulate and surpress error when Telemetry is disabled r=chutten
https://hg.mozilla.org/mozilla-central/rev/1062e65758d6
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: