Bug 1508599 - Return a proper result value on accumulate and surpress error when Telemetry is disabled r=chutten

Differential Revision: https://phabricator.services.mozilla.com/D13244