toolkit/components/telemetry/core/TelemetryHistogram.cpp
@@ -2626,23 +2626,23 @@ TelemetryHistogram::Accumulate(HistogramID aID, const nsCString& aKey,
   }
 }
 
-bool
+nsresult
 TelemetryHistogram::Accumulate(const char* name, uint32_t sample)
 {
   StaticMutexAutoLock locker(gTelemetryHistogramMutex);
   if (!internal_CanRecordBase()) {
-    return false;
+    return NS_ERROR_NOT_AVAILABLE;
   }
   HistogramID id;
   nsresult rv = internal_GetHistogramIdByName(locker, nsDependentCString(name), &id);
   if (NS_FAILED(rv)) {
-    return false;
+    return rv;
   }
   internal_Accumulate(locker, id, sample);
-  return true;
+  return NS_OK;
 }
 
-bool
+nsresult
 TelemetryHistogram::Accumulate(const char* name,
                                const nsCString& key, uint32_t sample)
 {
@@ -2651,7 +2651,7 @@ TelemetryHistogram::Accumulate(const char* name,
   {
     StaticMutexAutoLock locker(gTelemetryHistogramMutex);
     if (!internal_CanRecordBase()) {
-      return false;
+      return NS_ERROR_NOT_AVAILABLE;
     }
     HistogramID id;
     nsresult rv = internal_GetHistogramIdByName(locker, nsDependentCString(name), &id);
@@ -2659,7 +2659,7 @@ TelemetryHistogram::Accumulate(const char* name,
       // Check if we're allowed to record in the provided key, for this histogram.
       if (gHistogramInfos[id].allows_key(key)) {
         internal_Accumulate(locker, id, key, sample);
-        return true;
+        return NS_OK;
       }
       // We're holding |gTelemetryHistogramMutex|, so we can't print a message
       // here.
@@ -2674,7 +2674,7 @@ TelemetryHistogram::Accumulate(const char* name,
       mozilla::Telemetry::ScalarID::TELEMETRY_ACCUMULATE_UNKNOWN_HISTOGRAM_KEYS,
       NS_ConvertASCIItoUTF16(name), 1);
   }
-  return false;
+  return NS_ERROR_FAILURE;
 }
 
 void
